force-app/main/default/objects/Work_From_Home_Request__c/Work_From_Home_Request__c.object-meta.xml
<CustomObject>
    <label>Work From Home Request</label>
    <nameField>
        <displayFormat>WFH-{0000}</displayFormat>
        <label>Work From Home Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work From Home Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>