force-app/main/default/objects/Work_From_Home_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work From Home Requests</relationshipLabel>
    <relationshipName>Work_From_Home_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>