force-app/main/default/objects/Work_From_Home_Request__c/validationRules/restrictDate.validationRule-meta.xml
<ValidationRule>
    <fullName>restrictDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MONTH( DATEVALUE( Start_Date__c ) ) &lt; MONTH(TODAY()),MONTH( DATEVALUE( End_Date__c ) ) &lt; MONTH(TODAY()))</errorConditionFormula>
    <errorMessage>You can&apos;t apply WFH request for previous months</errorMessage>
</ValidationRule>