force-app/main/default/objects/Work_From_Home_Request__c/validationRules/restrictEndTimeLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>restrictEndTimeLimit</fullName>
    <active>true</active>
    <errorConditionFormula>TIMEVALUE( End_Date__c ) &lt; TIMEVALUE(&quot;05:30:00.000&quot;) || TIMEVALUE( End_Date__c ) &gt; TIMEVALUE(&quot;13:30:00.000&quot;)</errorConditionFormula>
    <errorMessage>End Time should be in between 11:00 AM till 07:00 PM</errorMessage>
</ValidationRule>