force-app/main/default/objects/Work_From_Home_Request__c/validationRules/restrictStartTimeLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>restrictStartTimeLimit</fullName>
    <active>true</active>
    <errorConditionFormula>TIMEVALUE(Start_Date__c) &lt; TIMEVALUE(&quot;04:30:00.000&quot;) || TIMEVALUE(Start_Date__c) &gt; TIMEVALUE(&quot;12:30:00.000&quot;)</errorConditionFormula>
    <errorMessage>start time must be 10:00 AM till 06:00PM</errorMessage>
</ValidationRule>